--- a/package.json
+++ b/package.json
@@ -1,4 +1,8 @@
 {
+  "license": "MIT",
+  "scripts": {
+    "test": "jest"
+  },
   "devDependencies": {
     "@babel/core": "^7.2.0",
     "@babel/preset-env": "^7.2.0",
