--- a/package.json
+++ b/package.json
@@ -7,9 +7,9 @@
     "@babel/core": "^7.2.0",
     "@babel/plugin-proposal-class-properties": "^7.3.3",
     "@babel/preset-env": "^7.2.0",
-    "babel-core": "7.0.0-bridge.0",
-    "babel-jest": "^23.6.0",
-    "jest": "^23.6.0",
+    "babel-core": "^6.26.3",
+    "babel-jest": "^24.1.0",
+    "jest": "^24.1.0",
     "prettier": "^1.15.3"
   },
   "dependencies": {
