--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@babel/core": "^7.2.0",
     "@babel/plugin-proposal-class-properties": "^7.3.3",
     "@babel/preset-env": "^7.2.0",
+    "@types/jest": "^24.0.9",
     "babel-core": "^6.26.3",
     "babel-jest": "^24.1.0",
     "jest": "^24.1.0",
